--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Recipe application",
   "scripts": {
     "start": "(parcel index.html) & parcel watch index.html",
-    "build": "parcel build index.html --no-scope-hoist --dist-dir ./dist"
+    "build": "parcel build index.html --dist-dir ./dist"
   },
   "author": "Joyful Player",
   "license": "ISC",
