--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "core-js": "^3.41.0",
-    "fractional": "^1.0.0"
+    "fractional": "^1.0.0",
+    "regenerator-runtime": "^0.14.1"
   }
 }
